fix bubble wrap

--- a/src/components/RenderChat/RenderChat.css
+++ b/src/components/RenderChat/RenderChat.css
@@ -24,4 +24,5 @@ h3 {
   background-color: white;
   color: rgb(120, 212, 244);
   padding: 3px 8px;
+  width: fit-content;
 }
